<resources>
    <string name="app_name">EPapp</string>
    <string name="confirmar_contraseña">Confirmacion</string>
    <string name="Contraseña_nueva">Contraseña\n</string>
    <string name="boton_entry">btn_entry\n</string>
    <string name="side_menu">menu</string>
    <string name="icon_btn">icono</string>
    <string name="user_icon">usuario</string>
    <string name="usuario">usuario</string>
    <string name="menu_btn">menu</string>
    <string name="CVV_BTN">CVV</string>
    <string name="scan_button">scan\n</string>
    <string name="Btn_intercom">intercom\n</string>
    <string name="pay_btn">pay</string>
</resources>