<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="141dp"
        android:layout_height="136dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_az" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/menu_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_icon" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="Numero de tarjeta "
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="84dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="date"
        android:text="MM/AA"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="84dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/CVV_BTN"
        android:inputType="number"
        android:text="CVV"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:inputType="text"
        android:text="Nombre del titular"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_rounded"
        android:text="Confirmar Pago"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />


</androidx.constraintlayout.widget.ConstraintLayout>